--- a/app/src/main/res/drawable-hdpi/roundedbutton.xml
+++ b/app/src/main/res/drawable-hdpi/roundedbutton.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="#eeffffff" />
-    <corners android:bottomRightRadius="25dip"
-        android:bottomLeftRadius="25dip"
-        android:topRightRadius="25dip"
-        android:topLeftRadius="25dip"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@android:color/background_light" />
+            <stroke
+                android:width="1dp"
+                android:color="@android:color/background_light" />
+            <size
+                android:width="100dp"
+                android:height="100dp" />
+
+        </shape>
+    </item>
+</layer-list>
