--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="candeo_primary">#f6353535</color>
     <color name="candeo_primary_dark">#fa181818</color>
     <color name="candeo_accent_light">#fffafafa</color>
+    <color name="candeo_translucent_white">#32fafafa</color>
     <color name="candeo_light_gray">#ffbdbdbd</color>
 </resources>
