--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -42,12 +42,8 @@
                             android:layout_weight="0.8"
                             android:text="SHOWCASE YOUR TALENT"/>
 
-                        <Switch
-                            android:id="@+id/candeo_selector"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.2"
-                            />
+
+
 
                     </LinearLayout>
 
@@ -84,10 +80,16 @@
                             android:background="?android:attr/selectableItemBackground"/>
 
                     </LinearLayout>
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/candeo_showcase_media_chooser"
+                        android:layout_below="@id/candeo_post_top_buttons"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        />
 
                     <LinearLayout
                         android:id="@+id/candeo_post_content_preview"
-                        android:layout_below="@id/candeo_post_top_buttons"
+                        android:layout_below="@id/candeo_showcase_media_chooser"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
