Implemented Response fetch

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="candeo_translucent_black_light">#32000000</color>
     <color name="candeo_translucent_black">#77000000</color>
     <color name="candeo_splash_translucent_black">#aa000000</color>
+    <color name="candeo_time_blue">#ff060852</color>
 </resources>
