--- a/app/src/main/res/layout/fragment_limelight.xml
+++ b/app/src/main/res/layout/fragment_limelight.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical">
 
     <include layout="@layout/loading_content"
-        android:id="@+id/candeo_data_loading"/>
+        android:id="@+id/candeo_data_loading"
+        android:visibility="gone"/>
 
     <include layout="@layout/no_content"
         android:id="@+id/candeo_no_content"
@@ -92,6 +93,24 @@
 
 
                     </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+
+                    android:gravity="right">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:maxWidth="100dp"
+                        android:padding="10dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:background="@drawable/transparent_button"
+                        android:text="Next\n is\n music"/>
 
                 </LinearLayout>
 
