--- a/app/src/main/res/layout/shout_post_layout.xml
+++ b/app/src/main/res/layout/shout_post_layout.xml
@@ -14,6 +14,41 @@
     tools:context="com.candeo.app.shout.ShoutPostFragment"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/candeo_shout_post_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/candeo_checked_green"
+            android:textStyle="bold"
+            android:text="PUBLIC"/>
+
+        <TextView
+            android:id="@+id/candeo_shout_post_type_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/candeo_checked_green"
+            android:textStyle="bold"
+            android:text="PUBLIC"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/candeo_shout_post_total_participants"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/candeo_private_red"
+        android:text="Total Particiapnts are "/>
+
     <EditText
         android:id="@+id/candeo_shout_post_body"
         android:layout_width="match_parent"
@@ -21,6 +56,7 @@
         android:lines="10"
         android:maxLines="300"
         android:padding="5dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="40dp"
         android:textColor="@color/candeo_primary_dark"
         android:textSize="13sp"
