--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="candeo_time_blue">#ff060852</color>
     <color name="candeo_light_btn_blue">#ff5186ce</color>
     <color name="candeo_checked_green">#ff78d08c</color>
+    <color name="candeo_private_red">#ffd03b36</color>
 </resources>
