Capitalization added to all Edit texts. Crashlytics added. Version bumped to 0.11

--- a/app/src/main/res/layout/activity_shout.xml
+++ b/app/src/main/res/layout/activity_shout.xml
@@ -316,6 +316,7 @@
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:maxLines="30"
+                android:inputType="textCapSentences|textMultiLine"
                 android:hint="Write your message"
                 android:layout_weight="9.5"/>
 
