--- a/app/src/main/res/layout/shout_post_layout.xml
+++ b/app/src/main/res/layout/shout_post_layout.xml
@@ -54,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lines="10"
+        android:inputType="textCapSentences|textMultiLine"
         android:maxLines="300"
         android:padding="5dp"
         android:layout_marginTop="40dp"
