--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -125,7 +125,7 @@
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:gravity="center"
-                      android:orientation="vertical">
+                      android:orientation="horizontal">
 
                       <com.candeo.app.ui.CustomTextView
                           android:id="@+id/candeo_user_name_text"
@@ -134,6 +134,15 @@
                           android:text="Partho Ghosh"
                           candeo:fontName="caviar.ttf"
                           android:textSize="18sp"/>
+
+                      <Button
+                          android:id="@+id/candeo_user_share"
+                          android:layout_width="30dp"
+                          android:layout_height="30dp"
+                          android:paddingLeft="3dp"
+                          android:background="?android:attr/selectableItemBackground"
+                          android:textSize="13sp"
+                          android:text="SHARE"/>
                   </LinearLayout>
               </LinearLayout>
 
